# Notes

./: .gitignore  README.md  backup_courses.sh  flake.nix  result  scientific.typ  template.typ  test.typ  typst-sympy-calculator.typ  update.sh  view.sh
.github/workflows/: main.yml
.zed/: settings.json
Homotopy Type Theory/: main.typ
Mathann需求/: main.typ  新系统需求文档.typ
autoArithExp/: lib.typ  test.typ
代数学二/: extra.typ  main old.typ  main.typ  test.typ  习题课.typ
几何学/: main.typ
同调代数/: main.typ
哲学导论/: main.typ  期中.typ
复变函数/: main.typ
常微分方程/: main.typ
并行与分布式计算/: main.typ
应用回归分析/: main.typ
抽象代数/: main.typ
数学模型/: main.typ
数理统计/: main.typ
数理逻辑/: main.typ
普物2/: main.typ
机器学习基础/: main.typ
机器学习数学导引/: main.typ
机器学习数学导引/code6/: .gitignore  README.md  pyproject.toml  train_output
机器学习数学导引/code6/src/code6/: main.py
机器学习数学导引/作业/code/: .gitignore  pyproject.toml
机器学习数学导引/作业/code/src/: kde.py  pca.py
杂项/: 6.20.typ  Algebraic Effect.typ  CSTAR中的前向证明和后向证明.typ  Extracting Functional Properties from Verified Imperative Programs.typ  FunctionalProgramming.typ  LyndonWord.typ  draft.typ  中文项目.typ  报告314.typ  线代.typ
泛函分析/: main.typ
理论力学/: main.typ
理论计算机基础/: main.typ
经济学原理/: 微观部分.typ
编译原理/: main.typ
英文文献阅读/: LDdoc.md  LR.typ  Stanford Encyclopedia of Philosophy Archive.md  hw2.typ  main.typ  ref.bib  报告1.typ  期末.md
计算方法B/: main.typ
计算机网络/: main.typ  数据链路层.typ  第一节.typ  第一节_o.typ  网络层.typ
论文/: AARA.typ  Explicit Refinement Types.typ  Opportunistic Parallel Lambda Calculus.typ  Staged Logic.typ  scallop.typ
软件分析/: main.typ
(+224 files in other folders)
