[project]
name = "code6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yhtq", email = "1414672068@qq.com"},
]
dependencies = ["torch>=2.5.1", "torchvision>=0.20.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "src/code6/main.py"
