[project]
name = "code"
version = "0.1.0"
description = "机器学习数学导引-代码作业"
authors = [
    {name = "yhtq", email = "1414672068@qq.com"},
]
dependencies = ["numpy>=2.1.2", "matplotlib>=3.9.2", "scikit-learn>=1.5.2", "pandas>=2.2.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
